# scttr

./: .gitignore  README  README.md
.git_old/: .COMMIT_EDITMSG.swp  COMMIT_EDITMSG  HEAD  ORIG_HEAD  index
.git_old/logs/: HEAD
.git_old/logs/refs/: stash
.git_old/logs/refs/heads/: broadening  bugpatching  exp1  exp_1s3d2p1s  get_ediff_opt  get_numsl_fix  indexing_fix  info_node_opt  k_means_rewrite  k_means_segfix  ll_data  master  miniprogram  mom_sorting  new_take  refractoring  screen_fix  sort_function  sort_states_rework  state_screening  sym_trans  tmp_data_fix
.git_old/refs/: stash
.git_old/refs/heads/: broadening  bugpatching  exp1  exp_1s3d2p1s  get_ediff_opt  get_numsl_fix  indexing_fix  info_node_opt  k_means_rewrite  ll_data  master  miniprogram  mom_sorting  new_take  refractoring  sort_function  state_screening  sym_trans  tmp_data_fix
cmake/: CMakeLists.txt  doxyfile.h.in  mainpage.h.in  scttr_cfg.h.in  smap_cfg.h.in
doc/: README.txt  diag.txt  doxyfile.in  mainpage.h
include/: dyn_array.c  dyn_array.h  red_molout.c
include/char_ops/: get_numsl.c  std_char_ops.c  std_char_ops.h
include/num_ops/: quicksort.c  quicksort.h  std_num_ops.c  std_num_ops.h
libs/: cache_opt.c  cache_opt.h  cpu_opt.c  cpu_opt.h  dyn_array.c  dyn_array.h  timing.c  timing.h
libs/char_ops/: get_nums.c  get_nums.h  std_char_ops.c  std_char_ops.h
libs/libcpuid/: .#asm-bits.c  libcpuid.c  libcpuid.h  libcpuid_types.h
libs/num_ops/: iquicks.c  iquicks.h  std_num_ops.c  std_num_ops.h
src/: *grep*  appc.c  appc.h  calc_spec.c  calc_spec.h  const.h  dynarray.c  dynarray.h  e_state_ll.c  e_state_ll.h  estate.c  estate.h  formats.h  glob_time.h  info_ll.h  info_node.c  info_node.h  inp_node_s.h  limits.h  main.c  metadata_s.h  octave-workspace  parse_input.c  parse_input.h  plot_template  rmap.c  rmap_cfg.h  rmap_structs.h  sci_const.h  sctr_cfg.h  scttr_cfg.h  scttr_io.c  scttr_io.h  smap.c  smap.h  smap_cfg.h  spec.c  spec.h  spec_info.c  spec_info.h  (+10 more)
src/char_ops/: get_numsl.c  get_numsl.h  std_char_ops.c  std_char_ops.h
src/io/: input_formats.h  parse_input.c  parse_input.h
src/num_ops/: k_meansl.c  k_meansl.h  num_ops.c  num_ops.h  quicksort.c  quicksort.h  std_num_ops.c  std_num_ops.h
